--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -65,6 +65,13 @@
     display: none;
 }
 
+.modelBox {
+    position:fixed;
+    inset:0 0 0 0;
+    background-color:#292F3F;
+    z-index:7777777;
+}
+
 @media only screen and (max-width:35rem) {
     .NavBar {
         width: 90%;
@@ -116,6 +123,10 @@
     
    .mobile_menu_items{
         padding-top: 1rem;
+    }
+    .modelBox{
+        position:absolute;
+        inset: 0 0 -70% 0;
     }
 }
 @media(min-width: 35rem) {
